--- a/main.css
+++ b/main.css
@@ -59,6 +59,13 @@ button:hover {
     justify-content: space-evenly;
 }
 
+.drop button {
+    margin: 0 25px;
+    width: 200px;
+    height: 50px;
+    font-size: 16px;
+}
+
 .comp {
     margin: 20px auto;
     width: 1000px;
@@ -78,10 +85,15 @@ button:hover {
 .comp img {
     width: 250px;
     height: 250px;
+    border: 1px solid #FFFFFF;
 }
 
 .comp h3, .comp h1 {
     margin: 0;
+}
+
+.drop h2 {
+    margin: 50px 0;
 }
 
 @media (max-width: 1100px) {
