--- a/main.css
+++ b/main.css
@@ -59,11 +59,39 @@ button:hover {
     justify-content: space-evenly;
 }
 
-.drop button {
+.drop {
+    margin: 0 auto;
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: space-evenly;
+}
+
+.text {
+    margin: 0 auto;
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-evenly;
+}
+
+.text button {
     margin: 0 25px;
     width: 200px;
     height: 50px;
     font-size: 16px;
+}
+
+.text h3, .text h1 {
+    margin: 10px 0;
+}
+
+.text hr {
+    width: 1000px;
 }
 
 .comp {
@@ -88,12 +116,10 @@ button:hover {
     border: 1px solid #FFFFFF;
 }
 
-.comp h3, .comp h1 {
-    margin: 0;
-}
-
-.drop h2 {
-    margin: 50px 0;
+.category h2 {
+    margin: 20px 0;
+    padding: 5px 300px;
+    background: #2d2f4b;
 }
 
 @media (max-width: 1100px) {
