--- a/main.css
+++ b/main.css
@@ -160,6 +160,10 @@ button:hover {
         width: 100%;
     }
 
+    .drop {
+        width: 100%;
+    }
+
     .comp {
         margin: 10px auto;
         width: 100%;
@@ -169,6 +173,36 @@ button:hover {
     .comp p {
         width: 175px;
         font-size: 16px;
+    }
+
+    .category h2 {
+        margin: 15px 0;
+        padding: 5px 25px;
+    }
+
+    .text {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .text button {
+        margin: 0 15px;
+        width: 100px;
+        height: 50px;
+        font-size: 14px;
+    }
+
+    .text hr {
+        width: 100%;
+    }
+
+    .text h1 {
+        font-size: 20px;
+    }
+
+    .text h3 {
+        font-size: 12px;
+        padding: 0 5px;
     }
 
 }
