--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,10 @@ button:hover {
     width: 500px;
 }
 
+#about big {
+    font-size: 45px;
+}
+
 #container {
     margin: 0 auto;
     background: #22243a;
@@ -185,6 +189,29 @@ button:hover {
     font-size: 24px;
 }
 
+.lore {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
+}
+
+.lore p {
+    text-align: left;
+    font-size: 14px;
+    width: 600px;
+}
+
+.char {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
 @media (max-width: 1100px) {
 
     body {
@@ -290,6 +317,33 @@ button:hover {
         width: 95%;
         height: 75px;
         font-size: 24px;
+    }
+
+    .lore {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+    }
+
+    .lore p {
+        text-align: left;
+        font-size: 13px;
+        width: 95%;
+    }
+
+    .char {
+        width: 95%;
+        margin-bottom: 15px;
+    }
+
+    #about big {
+        font-size: 28px;
+    }
+
+    #about small {
+        font-size: 15px;
     }
 
 }
