--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,30 @@ button:hover {
     font-size: 45px;
 }
 
+#nav {
+    width: 1000px;
+    margin: 15px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+
+#nav button {
+    width: 150px;
+    height: 25px;
+}
+
+#nav p {
+    font-size: 16px;
+}
+
+#simple-nav, #ext-nav {
+    display: block;
+}
+
 #container {
     margin: 0 auto;
     background: #22243a;
@@ -113,7 +137,7 @@ button:hover {
 
 .drop-btn button {
     width: 1000px;
-    height: 75px;
+    height: 60px;
     font-size: 36px;
 }
 
@@ -344,6 +368,16 @@ button:hover {
 
     #about small {
         font-size: 15px;
+    }
+
+    #nav {
+        width: 100%;
+        margin: 10px 0;
+        justify-content: space-evenly;
+    }
+
+    #ext-nav {
+        display: none;
     }
 
 }
