--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ button:hover {
 }
 
 #nav button {
-    width: 150px;
+    width: 125px;
     height: 25px;
 }
 
@@ -173,6 +173,7 @@ button:hover {
     align-items: center;
     align-content: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .comp p {
@@ -186,6 +187,24 @@ button:hover {
     height: 250px;
     border: 1px solid #FFFFFF;
     border-radius: 150px;
+}
+
+#showcase {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 1000px;
+}
+
+#showcase img {
+    margin: 0;
+    width: 200px;
+    height: 200px;
+    border: 5px solid #FFFFFF;
+    border-radius: 0;
 }
 
 .category h2 {
@@ -388,8 +407,23 @@ button:hover {
         justify-content: space-evenly;
     }
 
+    #nav button {
+        width: 100px;
+        font-size: 12px;
+    }
+
     #ext-nav {
         display: none;
+    }
+
+    #showcase {
+        width: 100%;
+    }
+
+    #showcase img {
+        width: 100px;
+        height: 100px;
+        border: 2px solid #FFFFFF;
     }
 
 }
