--- a/css/main.css
+++ b/css/main.css
@@ -321,10 +321,17 @@ hr {
 
 .showcase img {
     margin: 0;
-    width: 200px;
-    height: 200px;
+    width: 210px;
+    height: 210px;
     border: 5px solid #FFFFFF;
     border-radius: 0;
+}
+
+.showcase button {
+    margin: 5px;
+    width: 75px;
+    height: 75px;
+    font-size: 20px;
 }
 
 .showcase-img {
