--- a/css/main.css
+++ b/css/main.css
@@ -434,6 +434,11 @@ hr {
     width: 600px;
 }
 
+.lore h4 {
+    font-size: 16px;
+    margin: 15px 0 0 0;
+}
+
 .char {
     width: 400px;
     display: flex;
@@ -445,6 +450,19 @@ hr {
 
 .char img {
     border: 5px solid #FFFFFF;
+}
+
+.grave-row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
+}
+
+.grave-btn {
+    margin: 0 5px 0 0;
+    padding: 5px 15px;
 }
 
 /***********/
