fix: showcase display

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -33,7 +33,7 @@
     margin: 0 auto;
     position: relative;
     background-color: #22243a;
-    width: 100vw;
+    width: 1100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
